# qland

./: IGQK_V4_MASTER_PLAN.md  IGQK_VOLLSTAENDIGE_ANALYSE_V4.md  PHASE1_COMPLETE_SUMMARY.md  RALPH_MASTER_GUIDE.md  RALPH_PHASE1_MODELS.md  RALPH_PHASE2_MULTIMODAL.md  RALPH_PHASE3_INTEGRATION.md
.claude/: settings.local.json
.github/workflows/: qlang-ci.yml
IGQK_Complete_Package/igqk_saas/: web_ui.py
IGQK_Complete_Package/igqk_v4/: START_PHASE1.py  __init__.py
IGQK_Complete_Package/igqk_v4/models/: __init__.py  bert.py  gpt.py  vit.py
IGQK_Complete_Package/igqk_v4/quantum_training/trainers/: quantum_llm_trainer.py
IGQK_Complete_Package/igqk_v4/tests/: __init__.py  test_integration.py  test_models.py
IGQK_Complete_Package/igqk_v4/theory/fchl/: fractional_hebbian.py
IGQK_Complete_Package/igqk_v4/theory/hlwt/: hybrid_laplace_wavelet.py
IGQK_Complete_Package/igqk_v4/theory/tlgt/: ternary_lie_group.py
image_search/: .env.example  __init__.py  __main__.py  config.py  models.py  requirements.txt
image_search/api/: app.py
image_search/engines/: base.py  bing_search.py  clip_search.py  google_search.py  search_orchestrator.py  tineye_search.py  yandex_search.py
image_search/ui/static/: style.css
image_search/ui/templates/: index.html
image_search/utils/: image_utils.py
qlang/: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  MEMORY.md  Makefile  README.md  docker-compose.yml  install.sh  setup.sh
qlang/.github/workflows/: publish-pypi.yml
qlang/crates/qlang-agent/: Cargo.toml
qlang/crates/qlang-agent/src/: diff.rs  emitter.rs  lib.rs  packages.rs  protocol.rs
qlang/crates/qlang-compile/: Cargo.toml
qlang/crates/qlang-compile/src/: api.rs  api_test.rs  codegen.rs  gpu.rs  lib.rs  main.rs  matmul_jit.rs  modules.rs  onnx.rs  optimize.rs  parser.rs  repl.rs  visualize.rs
qlang/crates/qlang-core/: Cargo.toml
qlang/crates/qlang-core/src/: crypto.rs  ffi.rs  graph.rs  lib.rs  ops.rs  quantum.rs  serial.rs  shape_inference.rs  tensor.rs  type_check.rs  verify.rs
qlang/crates/qlang-python/: Cargo.toml  README.md  example.py  pyproject.toml
qlang/crates/qlang-python/src/: lib.rs
qlang/crates/qlang-python/tests/: test_qlang.py
qlang/crates/qlang-runtime/: Cargo.toml  build.rs
qlang/crates/qlang-runtime/src/: accel.rs  autograd.rs  bench.rs  checkpoint.rs  conv.rs  diagnostics.rs  executor.rs  fisher.rs  graph_ops.rs  graph_train.rs  hub.rs  lib.rs  linalg.rs  mnist.rs  ollama.rs  optimizers.rs  quantum_flow.rs  registry.rs  scheduler.rs  theorems.rs  training.rs  unified.rs  vm.rs  web_server.rs
qlang/crates/qlang-sdk/: Cargo.toml
qlang/crates/qlang-sdk/src/: lib.rs  prelude.rs
qlang/docs/: API.md  PITCH.md  QUICKSTART.md  TUTORIAL.md
qlang/docs/superpowers/plans/: 2026-04-04-qlang-revolution.md
qlang/docs/superpowers/specs/: 2026-04-04-qlang-revolution-design.md
qlang/examples/: benchmark.rs  benchmark_qlang_vs_json.rs  full_pipeline.rs  hello_qlang.rs  jit_compile.rs  onnx_import_compress.rs  train_autograd.rs  train_mnist.rs
qlang/scripts/: download_mnist.sh  install.sh
qlang/spec/: QLANG_SPEC.md
qlang/src/: lib.rs
qlang/web/: docs.html  index.html  index_old.html  pipe.html  wstest.html
travel-search/: .env.example  airports.py  app.py  requirements.txt
travel-search/templates/: index.html
