[package]
name = "qlang"
version = "0.1.0"
edition = "2024"
description = "QLANG - Graph-based AI-to-AI programming language"

[workspace]
members = [
    "crates/qlang-core",
    "crates/qlang-compile",
    "crates/qlang-runtime",
    "crates/qlang-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "QLANG - Graph-based AI-to-AI programming language"

[workspace.dependencies]
qlang-core = { path = "crates/qlang-core" }
qlang-compile = { path = "crates/qlang-compile" }
qlang-runtime = { path = "crates/qlang-runtime" }
qlang-agent = { path = "crates/qlang-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dependencies]
qlang-core = { workspace = true }
qlang-runtime = { workspace = true }
qlang-agent = { workspace = true }

[[example]]
name = "hello_qlang"
path = "examples/hello_qlang.rs"
