[package]
name = "qlang"
version = "0.1.0"
edition = "2021"
description = "QLANG - Graph-based AI-to-AI programming language"

[workspace]
members = [
    "crates/qlang-core",
    "crates/qlang-compile",
    "crates/qlang-runtime",
    "crates/qlang-agent",
    "crates/qlang-python",
    "crates/qlang-sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "QLANG - Graph-based AI-to-AI programming language"

[workspace.dependencies]
qlang-core = { path = "crates/qlang-core" }
qlang-compile = { path = "crates/qlang-compile", default-features = false }
qlang-runtime = { path = "crates/qlang-runtime" }
qlang-agent = { path = "crates/qlang-agent" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dependencies]
qlang-core = { workspace = true }
qlang-compile = { workspace = true }
qlang-runtime = { workspace = true }
qlang-agent = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }

[features]
default = ["llvm"]
llvm = ["inkwell", "qlang-compile/llvm"]
mlx = ["qlang-runtime/mlx"]

[[example]]
name = "hello_qlang"
path = "examples/hello_qlang.rs"

[[example]]
name = "neural_network"
path = "examples/neural_network.rs"

[[example]]
name = "jit_compile"
path = "examples/jit_compile.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "quantum_training"
path = "examples/quantum_training.rs"

[[example]]
name = "train_model"
path = "examples/train_model.rs"

[[example]]
name = "train_autograd"
path = "examples/train_autograd.rs"

[[example]]
name = "train_mnist"
path = "examples/train_mnist.rs"

[[example]]
name = "transformer"
path = "examples/transformer.rs"

[[example]]
name = "full_pipeline"
path = "examples/full_pipeline.rs"

[[example]]
name = "full_mnist_pipeline"
path = "examples/full_mnist_pipeline.rs"

[[example]]
name = "onnx_import_compress"
path = "examples/onnx_import_compress.rs"

[[example]]
name = "benchmark_qlang_vs_json"
path = "examples/benchmark_qlang_vs_json.rs"
