[package]
name = "qlang-compile"
version.workspace = true
edition.workspace = true
description = "QLANG graph compiler - Graph to machine code via LLVM"

[dependencies]
qlang-core = { workspace = true }
qlang-runtime = { workspace = true }
thiserror = { workspace = true }
inkwell = { version = "0.5", features = ["llvm18-0"] }

[[bin]]
name = "qlang-cli"
path = "src/main.rs"
