[package]
name = "qlang-python"
version = "0.1.0"
edition = "2024"

[lib]
name = "qlang"
crate-type = ["cdylib"]

[dependencies]
qlang-core = { path = "../qlang-core" }
qlang-runtime = { path = "../qlang-runtime" }
qlang-agent = { path = "../qlang-agent" }
pyo3 = { version = "0.23", features = ["extension-module"] }
