[package]
name = "qlang-runtime"
version.workspace = true
edition.workspace = true
description = "QLANG runtime - Graph executor and scheduler"

[features]
default = []
gpu = ["wgpu", "pollster"]

[dependencies]
qlang-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = "1.10"
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
